sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:11: error: not found: value rj
				copie(i-rj,i-j+1)
                                        ^