sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	var v=0
	var pos=0
	var x=0
	for(i<- 1 to getNombreValeurs()){
		v=getValeur(i)
		x=0
		for(j<- 1 to i){
			if(getValeur(i-j)>v){
				copie(i-rj,i-j+1)
				pos=i-j
				x=1
			}
		}	
		if(x!=0){	
		setValeur(pos,v)
		}
	}
}
